crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/expected_function_in_using_directive/state_variable/generated/solc/0.8.13-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 8187] Error: Expected function name.
   ╭─[input.sol:7:12]
   │
 7 │     using {x} for uint256;
   │            ┬  
   │            ╰── Error occurred here.
───╯
